# forgecode

./: .gitattributes  .gitignore  .pr-redirect-test  .sdk-tool-pr-test  ACP_TRACKING.md  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  FUNDING.yml  Justfile  LICENSE-APACHE  LICENSE-MIT  LOOP_MONITOR_RESEARCH.md  Makefile  README.md  SSOT.md  Taskfile.yml  deny.toml  flake.nix  forge.schema.json  forgecode-decl-splitter  install.ps1  install.sh  package-lock.json  package.json  result  test-write.txt  trufflehog.yml  vertex.json
.claude/docs/: folders.json  general_index.md
.codex/docs/: files.json  general_index.md
.devcontainer/: devcontainer.json
.forge/: FORGE_PR_DESCRIPTION.md
.github/: FUNDING.yml  branch-protection.main.json  labels.json  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: autofix.yml  bounty.yml  cachyos-release.yml  cargo-deny.yml  ci.yml  helios-lite-nightly.yml  labels.yml  release-drafter.yml  release.yml  stale.yml
apps/landing-helioslite/: README.md  index.html  package.json  vercel.json
assets/brand/: README.md
bench/: .forge.toml  README.md  __init__.py  forge_agent.py  forge_conversation.py  install-forge.sh.j2
benchmarks/perf_harness/: Cargo.toml
benchmarks/perf_harness/src/: main.rs
cachyos/: PKGBUILD
cachyos/makepkg.conf.d/: 99-cachyos-optimizations.conf
crates/forge3d/: Cargo.toml  forge3d.cdx.json
crates/forge3d/src/: config.rs  ipc.rs  lib.rs  main.rs  registry.rs  server.rs  store.rs
crates/forge_api/: Cargo.toml  forge_api.cdx.json
crates/forge_api/src/: api.rs  forge_api.rs
crates/forge_app/: Cargo.toml  forge_app.cdx.json
crates/forge_ci/: Cargo.toml  (+1 more)
crates/forge_dbd/: Cargo.toml  README.md  forge_dbd.cdx.json
crates/forge_dbd/src/: client.rs  main.rs  protocol.rs  server.rs
crates/forge_drift/: Cargo.toml  forge_drift.cdx.json
crates/forge_drift/benches/: drift_bench.rs
crates/forge_drift/src/: config.rs  event.rs
crates/forge_eventsource/: Cargo.toml  forge_eventsource.cdx.json
crates/forge_eventsource/benches/: eventsource_bench.rs
crates/forge_eventsource/src/: error.rs  event_source.rs  lib.rs  stop_signal.rs
crates/forge_eventsource/tests/: contract_conformance.rs
crates/forge_json_repair/: Cargo.toml  forge_json_repair.cdx.json
crates/forge_json_repair/benches/: json_repair_bench.rs
crates/forge_json_repair/examples/: heap_profile.rs
crates/forge_json_repair/src/: schema_coercion.rs
crates/forge_jsonrpc/: Cargo.toml
crates/forge_jsonrpc/src/: error.rs  lib.rs  server.rs  types.rs
crates/forge_jsonrpc/src/transport/: stdio.rs
crates/forge_loop/: Cargo.toml
crates/forge_loop/src/: executor.rs  lib.rs  scheduler.rs  state.rs
crates/forge_main/: Cargo.toml  build.rs  forge_main.cdx.json
crates/forge_main/src/: acp_runner.rs  banner.rs  built_in_commands.json  cli.rs  conversation_selector.rs  editor.rs  error.rs  highlighter.rs  info.rs  input.rs  lib.rs  logs.rs  main.rs  model.rs  porcelain.rs  prompt.rs  sandbox.rs  select_cmd.rs  state.rs  stream_renderer.rs  tracker.rs  ui.rs  update.rs  utils.rs  vscode.rs
crates/forge_main/src/cmd/: ghostty.rs  mod.rs
crates/forge_main/src/completer/: command.rs  input_completer.rs  search_term.rs
crates/forge_main/src/fish/: rprompt.rs
crates/forge_main/src/terminal/: mod.rs
crates/forge_main/src/zsh/: mod.rs  paste.rs  plugin.rs  rprompt.rs  style.rs
crates/forge_main/tests/: ghostty.rs
crates/forge_pheno_evals/: Cargo.toml
crates/forge_pheno_evals/src/: lib.rs
crates/forge_pheno_memory/: Cargo.toml
crates/forge_pheno_memory/src/: lib.rs
crates/forge_pheno_shell/: Cargo.toml
crates/forge_pheno_shell/src/: lib.rs
crates/forge_pheno_winterminal/: Cargo.toml
crates/forge_pheno_winterminal/src/: lib.rs
crates/forge_repo_map/: Cargo.toml
crates/forge_repo_map/src/: builder.rs  lib.rs  parser.rs  types.rs
crates/forge_similarity/: Cargo.toml  forge_similarity.cdx.json
crates/forge_similarity/benches/: similarity_bench.rs
crates/forge_similarity/src/: hash_only.rs
crates/forge_stream/: Cargo.toml  forge_stream.cdx.json
crates/forge_stream/benches/: stream_bench.rs
crates/forge_tui/: Cargo.toml
crates/forge_tui/src/: main.rs
crates/forge_walker/: Cargo.toml  forge_walker.cdx.json
crates/forge_walker/benches/: walker_bench.rs
crates/forge_walker/src/: walker.rs
crates/ghostty-kit/: Cargo.toml  ghostty-kit.cdx.json
crates/ghostty-kit/src/: config.rs  error.rs  ipc.rs  ipc_request.rs  ipc_response.rs  lib.rs  serialize.rs  value.rs
crates/ghostty-kit/tests/: .gitignore  golden.rs
crates/ghostty-kit/tests/fixtures/: included-colors.ghostty  included-keybinds.ghostty  minimal.ghostty  multisection.ghostty  themed.ghostty  with-includes.ghostty  with-variables.ghostty
crates/ghostty-kit/tests/golden/: minimal.json  multisection.json  themed.json  with-includes.json  with-variables.json
docs/: FORK.md  NOTICE.md  RENAMES-STRATEGY.md  SSOT.md  UPDATE-STRATEGY.md  forge-dev-install.md
packaging/: README.md
plans/: 2026-04-17-static-model-list-support-v1.md  2026-04-18-model-speed-dial-v1.md  2026-04-20-refactor-hook-system-v1.md  2026-04-21-fish-shell-adaptation-and-image-paste-1.0.md  2026-04-21-static-model-list-support-v2.md  2026-04-30-compact-output-settings.md  2026-05-02-compaction-enhancement-v1.md  2026-05-05-omniroute-benchmark-plan-v1.md  2026-05-25-term-reverse-index-v1.md
scripts/: build-cachyos-pkg.sh  install.sh  list-all-porcelain.sh  setup-cachyos-build-env.sh  test-cachyos-build-podman.sh  test-config-env.sh
shell-plugin/: README.md  doctor.zsh  forge.fish  forge.plugin.zsh  forge.theme.zsh
src/: index.ts
templates/: forge-custom-agent-template.md  forge-partial-background-instructions.md  forge-partial-skill-instructions.md  forge-partial-system-info.md  forge-partial-tool-error-reflection.md
tests/: domain.test.ts
tooling/forge-context-backfill/: Cargo.toml
tooling/forge-context-backfill/src/: codec.rs  db.rs  main.rs  proc.rs  report.rs
tooling/forge-vacuum/: Cargo.toml
tooling/forge-vacuum/src/: main.rs
(+571 files in other folders)
