[package]
name = "forge_api"
version = "0.1.1"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
url.workspace = true
async-trait.workspace = true
forge_domain.workspace = true
forge_stream.workspace = true
forge_services.workspace = true
forge_repo.workspace = true
forge_infra.workspace = true
futures.workspace = true
tokio.workspace = true
tracing.workspace = true








forge_app.workspace = true
serde_json.workspace = true
forge_config.workspace = true
tokio-util.workspace = true

[dev-dependencies]
