[package]
name = "forge_dbd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
tracing = { workspace = true }
bincode = "1.3"
forge_domain = { workspace = true }
