[package]
name = "forge_dbd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WIP: SQLite daemon for persistent conversation storage (not yet wired into forge_app)"

[dependencies]
anyhow = { workspace = true }
dirs = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["net", "rt-multi-thread", "macros", "sync", "time", "fs", "io-util", "signal"] }
tracing = { workspace = true }
bincode = "1.3"
forge_domain = { workspace = true }

[dev-dependencies]
tempfile = "3"
