[package]
name = "forge_eventsource"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
eventsource-stream = "0.2.3"
reqwest = { version = "0.12.0", default-features = false, features = ["stream"] }
futures-core = "0.3.5"
pin-project-lite = "0.2.8"
nom = "7.1.0"
mime = "0.3.16"
futures-timer = "3.0.2"
thiserror = "1.0.30"

[dev-dependencies]
futures = "0.3.5"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
futures-retry = "0.6"
pin-utils = "0.1"
rocket = "0.5.0"
