[package]
name = "forge_loop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["sync", "time", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "rt-multi-thread"] }
