[package]
name = "forge_main"
version = "2.10.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "HeliosLite (formerly Forgecode) CLI — main crate. Hosts the canonical `helioslite` binary alongside the legacy `forge`/`forge-dev` aliases during the deprecation window. See docs/RENAMES-STRATEGY.md."
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true

[[bin]]
name = "forge"
path = "src/main.rs"

[features]
dev-binary = []

[[bin]]
name = "forge-dev"
path = "src/main.rs"
required-features = ["dev-binary"]

# HeliosLite canonical binary (Gate 1b, additive). Same entry point as forge /
# forge-dev, distinct binary name. The package *name* on crates.io remains
# `forge_main` until the canonical rename lands in a later gate.
[[bin]]
name = "helioslite"
path = "src/main.rs"


[dependencies]
thiserror = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
forge_app.workspace = true
forge_api.workspace = true
forge_domain.workspace = true
forge_config.workspace = true
forge_walker.workspace = true
forge_display.workspace = true
forge_tracker.workspace = true
bstr.workspace = true

forge_spinner.workspace = true
forge_select.workspace = true

merge.workspace = true
nucleo.workspace = true
nucleo-picker.workspace = true
libc = "0.2"
forge_fs.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
futures.workspace = true
colored.workspace = true

anyhow.workspace = true
derive_setters.workspace = true
lazy_static.workspace = true
rustyline.workspace = true
nu-ansi-term.workspace = true
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
toml_edit.workspace = true
regex.workspace = true
strum.workspace = true
strum_macros.workspace = true

convert_case.workspace = true
gix.workspace = true
update-informer = { version = "1.2.0", default-features = false, features = [
    "github",
    "ureq",
    "rustls-tls",
] }
dirs.workspace = true
open.workspace = true
humantime.workspace = true
num-format.workspace = true
url.workspace = true
forge_embed.workspace = true
include_dir.workspace = true
indexmap.workspace = true
async-recursion.workspace = true

forge_markdown_stream.workspace = true
strip-ansi-escapes.workspace = true
terminal_size = "0.4"
rustls.workspace = true
tempfile.workspace = true
tiny_http.workspace = true

# jemalloc on macOS ARM64 triggers bug #2532 (HPA probes every 4KB page → 14s cold
# init vs 25ms baseline). Gate to Linux only; use mimalloc on macOS for similar
# fragmentation wins without the ARM64 regression.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mimalloc.workspace = true

[target.'cfg(windows)'.dependencies]
enable-ansi-support.workspace = true
windows-sys = { version = "0.61", features = ["Win32_System_Console"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
arboard = "3.4"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "time", "test-util"] }
insta.workspace = true
pretty_assertions.workspace = true
serial_test = "3.4"
fake = { version = "5.1.0", features = ["derive"] }
forge_domain = { path = "../forge_domain" }

[package.metadata.bundle]
# Terminal-Forge visual identity (proposed 2026-07-06 by vision-pillar).
# Phenotype-org addition (not present in upstream tailcallhq/forgecode).
# Icon source of truth: ../../assets/brand/forgecode-icon.svg.
name = "forgecode"
identifier = "ai.kooshapari.forgecode"
icon = ["../../assets/icons/forgecode.iconset"]
resources = []
category = "DeveloperTool"
short_description = "AI-enhanced terminal development environment"
long_description = "Agentic coding CLI/TUI with ZSH plugin support."
