[package]
name = "forge_pheno_evals"
version = "0.1.0"
edition = "2021"
description = "Eval harness for forgecode memory sidecars (ADR-097) — routes forgecode's evaluation surface through pheno-forge-plugins"
license = "Apache-2.0"

[dependencies]
thegent-memory = { path = "../../../thegent/crates/thegent-memory" }
async-trait = "0.1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
