[workspace]
# Standalone crate to avoid bloating the main workspace build

[package]
name = "forge-context-backfill"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rusqlite = { version = "0.32", features = ["bundled"] }
clap = { version = "4.6", features = ["derive"] }
zstd = "0.13"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
humansize = "2.1"
shellexpand = "3.0"
nix = { version = "0.29", features = ["fs"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
